[FIX] web: fix flickering issue in grouped kanban
purpose of this commit is to remove flickering which occurs near
settings icon in the grouped kanban stage.

before this commit when the user hovers the mouse just before the
header title, setting icon is flickering because of margin-top, due to
margin-top cursor is hovered outside the kanban title but cursor pointer
still remains inside kanban title.

after this commit, no flickering occur, remove margin-top, instead of
margin-top increase height of the kanban title

task-2060825

--- a/addons/web/static/src/scss/kanban_column_progressbar.scss
+++ b/addons/web/static/src/scss/kanban_column_progressbar.scss
@@ -43,8 +43,7 @@
 // If columns has the progressbar, adapt the layout
 .o_kanban_view .o_kanban_group.o_kanban_has_progressbar {
     > .o_kanban_header .o_kanban_header_title {
-        height: $o-kanban-header-title-height*0.6;
-        margin-top: 5px;
+        height: $o-kanban-header-title-height*0.7;
     }
 
     &.o_kanban_no_records {
